--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -7,11 +7,11 @@ on:
       KERNEL_SOURCE:
         description: 'Kernel Source'
         required: true
-        default: 'TheVoyager0777/Kernel_Xiaomi_SM8150_R'
+        default: 'donvito007/kernel_xiaomi_raphael_bool-x'
       KERNEL_SOURCE_BRANCH:
         description: 'Branch'
         required: true
-        default: 'rapheus'
+        default: '13.0-ksu'
       KERNEL_DEFCONFIG:
         description: 'Defconfig'
         required: true
