--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -7,11 +7,11 @@ on:
       KERNEL_SOURCE:
         description: 'Kernel Source'
         required: true
-        default: 'donvito007/kernel_xiaomi_raphael_bool-x'
+        default: 'onettboots/bool-x_xiaomi_raphael'
       KERNEL_SOURCE_BRANCH:
         description: 'Branch'
         required: true
-        default: '13.0-ksu'
+        default: 'saaya1'
       KERNEL_DEFCONFIG:
         description: 'Defconfig'
         required: true
