--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -7,7 +7,7 @@ on:
       KERNEL_SOURCE:
         description: 'Kernel Source'
         required: true
-        default: 'donvito007/Kernel_Xiaomi_SM8150_R'
+        default: 'https://github.com/donvito007/Kernel_Xiaomi_SM8150_Raphael'
       KERNEL_SOURCE_BRANCH:
         description: 'Branch'
         required: true
