--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -27,7 +27,7 @@ on:
       CLANG_URL:
         description: 'Clang URL'
         required: true
-        default: 'https://github.com/kdrag0n/proton-clang/'
+        default: 'https://github.com/kdrag0n/proton-clang/archive/refs/tags/20210522.tar.gz'
       USE_KERNELSU:
         description: 'Use KernelSU'
         required: true
