--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -11,7 +11,7 @@ on:
       KERNEL_SOURCE_BRANCH:
         description: 'Branch'
         required: true
-        default: 'VK-VI'
+        default: 'master'
       KERNEL_DEFCONFIG:
         description: 'Defconfig'
         required: true
