--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -103,7 +103,8 @@ jobs:
         if: env.USE_KERNELSU == 'true'
         run: |
           cd android-kernel
-          git apply ../patch/KernelSU.patch
+          rm -rf KernelSU
+          # /*git apply ../patch/KernelSU.patch */
           curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s main 
           echo "UPLOADNAME=-KernelSU" >> $GITHUB_ENV
           cd KernelSU
